# batear

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults  sdkconfig.detector  sdkconfig.gateway
.github/workflows/: cppcheck.yml  esp-idf-build.yml
build_detector/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_app_args  flash_project_args  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_detector/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  project_description.json
build_detector/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_detector/esp-idf/: cmake_install.cmake
build_detector/gdbinit/: gdbinit  symbols
build_detector/log/: idf_py_stderr_output_85967  idf_py_stdout_output_85967  idf_py_stdout_output_86351  idf_py_stdout_output_91098  idf_py_stdout_output_91113
build_detector/toolchain/: cflags  cxxflags
build_gateway/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  batear.map  cmake_install.cmake  config.env  flasher_args.json  kconfigs.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_gateway/gdbinit/: gdbinit  (+1 more)
docs/: CNAME  build-flash.md  configuration.md  getting-started.md  index.md
main/: CMakeLists.txt  EspIdfHal.cpp  EspIdfHal.h  Kconfig.projbuild  audio_processor.c  audio_processor.h  audio_task.c  audio_task.h  config_console.c  config_console.h  drone_detector.h  gateway_task.cpp  gateway_task.h  idf_component.yml  lora_crypto.h  lora_task.cpp  lora_task.h  lorawan_provision.c  lorawan_provision.h  main.c  main.cpp  mqtt_task.cpp  mqtt_task.h  oled.c  oled.h  pin_config.h
web/: manifest_detector.json  manifest_gateway.json
(+463 files in other folders)
